# ipso

./: .gitignore  CHANGELOG.md  CNAME  Cargo.nix  Cargo.toml  README.md  REFERENCE.md  build  default.nix  docs  flake.nix  golden.nix  shell.nix  tests.nix
.github/workflows/: checkReleaseVersion  ipso-cli.yml  postBuildHook  postBuildHookMacos  publish-site.yml  tests.yml  uploadToCache  uploadToCacheMacos
benches/: todolist_1.rs
benchmarks/: Cargo.toml
benchmarks/src/: todolist_1.rs  todolist_1_input.txt
core/: Cargo.toml
core/src/: lib.rs  test.rs
diagnostic/: Cargo.toml
docs/: docs.html  index.html  index.md  project-management.html  project-management.md  reference.html  reference.md
docs/blog/: 2022-08-03-why-ipso.html  2023-02-26-version-0-5.html  2023-06-01-version-0-6.html  index.html
docs/contributing/: forking.md  project-management.md
docs/css/: default.css  syntax.css
docs/docs/: index.html  project-management.html  reference.html
examples/: 1.dhall  1.ipso  10.dhall  10.ipso  11.dhall  11.ipso  12.dhall  12.ipso  13.dhall  13.ipso  14.dhall  14.ipso  15.dhall  15.ipso  16.dhall  16.ipso  17.dhall  17.ipso  18.dhall  18.ipso  19.dhall  19.ipso  2.dhall  2.ipso  20.dhall  20.ipso  21.dhall  21.ipso  22.dhall  22.ipso  23.dhall  23.ipso  24.dhall  24.ipso  25.dhall  25.ipso  26.dhall  26.ipso  27.dhall  28.dhall  (+307 more)
examples/27/: greeting.ipso  main.ipso
examples/28/: greeting.ipso
examples/29/: greeting.ipso
examples/badExplicitImport/: main.ipso  other.ipso
examples/badRenamedImport/: a.ipso  main.ipso
examples/goodRenamedImport/: main.ipso
examples/importAll/: main.ipso  other.ipso
examples/moduleItemNotInScope/: main.ipso
examples/moduleShadow/: a.ipso  b.ipso  main.ipso
examples/shebang/: hello_world.dhall  hello_world.ipso
examples/submoduleNotInScope/: a.ipso  main.ipso
golden/: Main.hs  default.nix  ipso-golden.cabal
ipso/: Cargo.toml
ipso-builtins/: Cargo.toml
ipso-builtins/src/: array.rs  char.rs  cmd.rs  env.rs  exit.rs  file.rs  int.rs  io.rs  lib.rs  path.rs  string.rs
ipso-cli/: Cargo.toml
ipso-cli/benches/: todolist_1.rs
ipso-cli/src/: lib.rs  main.rs  repl.rs  run.rs  version.rs
ipso-cli/src/repl/: circular_buffer.rs  mod.rs
ipso-core/: Cargo.toml
ipso-core/src/: lib.rs  test.rs
ipso-diagnostic/: Cargo.toml
ipso-diagnostic/src/: lib.rs  test.rs
ipso-eval/: Cargo.toml
ipso-eval/src/: bindings.rs  lib.rs  reflect.rs  test.rs
ipso-eval/src/closure_conversion/: mod.rs  test.rs
ipso-import/: Cargo.toml
ipso-import/src/: lib.rs
ipso-lex/: Cargo.toml
ipso-lex/src/: lib.rs  test.rs  token.rs
ipso-lex/src/token/: mod.rs  test.rs
ipso-parse/: Cargo.toml
ipso-parse/src/: indentation.rs  lib.rs  test.rs
ipso-parse/src/grammar/: mod.rs  type.rs
ipso-parse/src/grammar/expr/: mod.rs  test.rs
ipso-parse/src/grammar/module/: mod.rs  test.rs
ipso-parse/src/grammar/pattern/: mod.rs  test.rs
ipso-parse/src/grammar/type/: mod.rs  test.rs
ipso-parse/src/operator/: mod.rs  test.rs
ipso-repl/: Cargo.toml
ipso-repl/src/: lib.rs
ipso-rope/: Cargo.toml
ipso-rope/src/: lib.rs  test.rs
ipso-syntax/: Cargo.toml
ipso-syntax/src/: desugar.rs  kind.rs  lib.rs  test.rs  type.rs
ipso-syntax/src/desugar/: mod.rs  test.rs
ipso-typecheck/: Cargo.toml
ipso-typecheck/src/: kind_inference.rs  lib.rs  metavariables.rs  test.rs
ipso-typecheck/src/constraint_solving/: mod.rs  test.rs
ipso-typecheck/src/declaration/: mod.rs
ipso-typecheck/src/evidence/: mod.rs
ipso-typecheck/src/evidence/solver/: mod.rs  test.rs
ipso-typecheck/src/kind_inference/: mod.rs  test.rs
ipso-typecheck/src/kind_inference/unification/: mod.rs
ipso-typecheck/src/module/: mod.rs
ipso-typecheck/src/substitution/: mod.rs  test.rs
ipso-typecheck/src/type_inference/: mod.rs  test.rs
ipso-typecheck/src/type_inference/unification/: mod.rs
ipso-util/: Cargo.toml
ipso-util/src/: fnv_hash_multi_map.rs  hash_multi_set.rs  iter.rs  lib.rs
ipso/src/: builtins.rs  import.rs  ipso.rs  main.rs  run.rs
ipso/src/core/: mod.rs  test.rs
ipso/src/eval/: mod.rs  test.rs
ipso/src/evidence/: mod.rs  solver.rs
ipso/src/evidence/solver/: mod.rs  test.rs
ipso/src/parse/: mod.rs  test.rs
ipso/src/rope/: mod.rs
ipso/src/syntax/: mod.rs
ipso/src/typecheck/: mod.rs  test.rs
ipso/src/typecheck/substitution/: mod.rs  test.rs
lex/: Cargo.toml
lex/src/: token.rs
parse/: Cargo.toml
parse/src/: lib.rs
reference/: REFERENCE.md  cabal.project
reference/ipso/: CHANGELOG.md  ipso.cabal
rope/: Cargo.toml
scripts/: callgrind  dhat  golden  recheck  shebang  test
site/: flake.nix  generator.cabal  generator.hs  generator.nix  site.hs
site/css/: default.css  syntax.css
site/pages/: index.md
site/pages/blog/: 2022-08-03-why-ipso.md  2023-02-26-version-0-5.md  2023-06-01-version-0-6.md
site/pages/docs/: index.md  reference.md
site/syntax/: ipso-repl.xml  ipso.xml
site/templates/: base.html  blog.html  head.html  nav.html
src/: builtins.rs  core.rs  diagnostic.rs  eval.rs  evidence.rs  import.rs  ipso.rs  iter.rs  lex.rs  main.rs  parse.rs  rope.rs  run.rs  syntax.rs  token.rs  typecheck.rs  void.rs
src/core/: test.rs
src/diagnostic/: test.rs
src/eval/: mod.rs  test.rs
src/evidence/: solver.rs
src/evidence/solver/: test.rs
src/lex/: test.rs
src/parse/: test.rs
src/rope/: test.rs
src/syntax/: test.rs
src/typecheck/: mod.rs  substitution.rs  test.rs
src/typecheck/substitution/: test.rs
syntax/: Cargo.toml
syntax/src/: lib.rs
tests/: cabal.project
tests/common/: default.nix  ipso-tests-common.cabal  ipso-tests-common.nix
tests/common/src/Test/Ipso/: Common.hs
tests/golden/: Main.hs  default.nix  ipso-golden.cabal  ipso-golden.nix
tests/shebang/: Main.hs  default.nix  ipso-shebang.cabal  ipso-shebang.nix
vscode-ipso/: CHANGELOG.md  README.md  flake.nix  language-configuration.json  package.json  vsc-extension-quickstart.md
vscode-ipso/scripts/: package
vscode-ipso/snippets/: ipso.json
vscode-ipso/syntaxes/: ipso.tmLanguage.json
(+2 files in other folders)
