[package]
name = "ipso"
version = "0.1.0"
authors = ["Isaac Elliott <isaace71295@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
typed-arena = "2.0.1"

[lib]
name = "ipso"
path = "./src/ipso.rs"
