[workspace]
members = [
    "benchmarks",
    "ipso-builtins",
    "ipso-cli",
    "ipso-core",
    "ipso-diagnostic",
    "ipso-eval",
    "ipso-import",
    "ipso-lex",
    "ipso-parse",
    "ipso-repl",
    "ipso-rope",
    "ipso-syntax",
    "ipso-typecheck",
    "ipso-util",
]

[profile.release]
lto = true
codegen-units = 1
