[package]
name = "ipso-cli"
version = "0.1.0"
authors = ["Isaac Elliott <isaace71295@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ipso"
path = "./src/main.rs"

[dependencies]
ipso-builtins = { path = "../ipso-builtins" }
ipso-core = { path = "../ipso-core" }
ipso-diagnostic = { path = "../ipso-diagnostic" }
ipso-eval = { path = "../ipso-eval" }
ipso-import = { path = "../ipso-import" }
ipso-lex = { path = "../ipso-lex" }
ipso-parse = { path = "../ipso-parse" }
ipso-repl = { path = "../ipso-repl" }
ipso-syntax = { path = "../ipso-syntax" }
ipso-typecheck = { path = "../ipso-typecheck" }
termion = "^1.5"

[dependencies.clap]
version = "^4.0"
default-features = false
features = ["std", "derive", "error-context", "help", "usage"]