[package]
name = "ipso-eval"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fnv = "1.0.7"
ipso-core = { path = "../ipso-core" }
ipso-rope = { path = "../ipso-rope" }
ipso-syntax = { path = "../ipso-syntax" }
paste = "1.0.5"