[package]
name = "ipso-lex"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipso-syntax = { path = "../ipso-syntax" }
quickcheck = { version = "1.0.3", default-features = false }

[dev-dependencies]
quickcheck_macros = "1"
