[package]
name = "ipso-parse"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fixedbitset = "0.4.0"
fnv = "1.0.7"
ipso-diagnostic = { path = "../ipso-diagnostic" }
ipso-lex = { path = "../ipso-lex" }
ipso-syntax = { path = "../ipso-syntax" }
