[package]
name = "ipso-repl"
version = "0.1.0"
edition = "2021"

[dependencies]
ipso-builtins = { path = "../ipso-builtins" }
ipso-core = { path = "../ipso-core" }
ipso-diagnostic = { path = "../ipso-diagnostic" }
ipso-eval = { path = "../ipso-eval" }
ipso-import = { path = "../ipso-import" }
ipso-syntax = { path = "../ipso-syntax" }
ipso-typecheck = { path = "../ipso-typecheck" }
typed-arena = "2.0.1"