[package]
name = "ipso-syntax"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipso-diagnostic = { path = "../ipso-diagnostic" }
ipso-util = { path = "../ipso-util" }
quickcheck = { version = "1.0.3", default-features = false }

[dev-dependencies]
pretty_assertions = "1.3.0"
quickcheck_macros = "1"
