[package]
name = "ipso-typecheck"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fnv = "1.0.7"
ipso-builtins = { path = "../ipso-builtins" }
ipso-core = { path = "../ipso-core" }
ipso-diagnostic = { path = "../ipso-diagnostic" }
ipso-rope = { path = "../ipso-rope" }
ipso-syntax = { path = "../ipso-syntax" }
ipso-util = { path = "../ipso-util" }

[dev-dependencies]
pretty_assertions = "1.3.0"
