[package]
name = "ipso"
version = "0.1.0"
authors = ["Isaac Elliott <isaace71295@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../core" }
diagnostic = { path = "../diagnostic" }
fixedbitset = "0.4.0"
fnv = "1.0.7"
lazy_static = "1.4.0"
lex = { path = "../lex" }
paste = "1.0.5"
syntax = { path = "../syntax" }
typed-arena = "2.0.1"
util = { path = "../util" }

[lib]
name = "ipso"
path = "./src/ipso.rs"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "todolist_1"
path = "benches/todolist_1.rs"
harness = false
