[package]
name = "ipso"
version = "0.1.0"
authors = ["Isaac Elliott <isaace71295@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fnv = "1.0.7"
ipso-core = { path = "../ipso-core" }
ipso-diagnostic = { path = "../ipso-diagnostic" }
ipso-lex = { path = "../ipso-lex" }
ipso-parse = { path = "../ipso-parse" }
ipso-rope = { path = "../ipso-rope" }
ipso-syntax = { path = "../ipso-syntax" }
ipso-util = { path = "../ipso-util" }
lazy_static = "1.4.0"
paste = "1.0.5"
typed-arena = "2.0.1"

[lib]
name = "ipso"
path = "./src/ipso.rs"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "todolist_1"
path = "benches/todolist_1.rs"
harness = false
