name:               generator
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable generator
  main-is:          generator.hs
  build-depends:    
    base == 4.*,
    blaze-html,
    filepath,
    hakyll == 4.15.*,
    pandoc,
    skylighting-core,
    time
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
