cabal-version:       2.4

name:                ipso-tests-common
version:             0.1.0.0
author:              Isaac Elliott
maintainer:          isaace71295@gmail.com

library
  exposed-modules:     Test.Ipso.Common
  hs-source-dirs:      src
  build-depends:       base >=4.12 && <5
                     , dhall >=1.28
                     , directory
                     , filepath
                     , optparse-applicative
                     , process
                     , selective
                     , text
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror
