cabal-version:       2.4

name:                ipso-golden
version:             0.1.0.0
author:              Isaac Elliott
maintainer:          isaace71295@gmail.com

executable ipso-golden
  main-is:             Main.hs
  build-depends:       base >=4.15 && <5
                     , dhall >=1.28
                     , ipso-tests-common
                     , optparse-applicative
                     , process
                     , selective
                     , text
                     , vector
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror
