cabal-version:       2.4

name:                ipso-shebang
version:             0.1.0.0
author:              Isaac Elliott
maintainer:          isaace71295@gmail.com

executable ipso-shebang
  main-is:             Main.hs
  build-depends:       base >=4.12 && <5
                     , dhall >=1.28
                     , filepath
                     , ipso-tests-common
                     , process
                     , selective
                     , text
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror
